--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>第一次</title>
+    <title>我的博客</title>
 </head>
 <body>
     <h1>吴俊明</h1>
